--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html> 
 <html lang="en-us">
 <head>
-<meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Minimalistic Web Workers Demo</title>
 <style type="text/css">
 
